---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/adt_option_and.bend
---
NumScott:
λa (a λb switch b = b { 0: λc λd (d λe switch e = e { 0: λf λg λh (h Option/Some/tag λi f); _: λ* Option/None; } c); _: λ* Option/None; })

Scott:
λa (a λb λc (c λd λe λf λ* (f λg d) λ* Option/None b) λ* Option/None)
